--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "vue": "^2.5.13",
     "vue-router": "^3.0.1",
+    "vuetify": "^1.0.14",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
